필터 수정 / 클래스 정리

--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -109,9 +109,11 @@
     <ClInclude Include="cMonsterManager.h" />
     <ClInclude Include="cPartcleEmitter.h" />
     <ClInclude Include="cParticle.h" />
+    <ClInclude Include="cParticleQuad.h" />
     <ClInclude Include="cPet.h" />
     <ClInclude Include="cPhysicManager.h" />
     <ClInclude Include="cPlayer.h" />
+    <ClInclude Include="cQuadParticleEmitter.h" />
     <ClInclude Include="cQuadTree.h" />
     <ClInclude Include="cResourceMgr_XSkinnedMesh.h" />
     <ClInclude Include="cResourceMgr.h" />
@@ -161,7 +163,6 @@
     <ClInclude Include="cUI_SkillDeck.h" />
     <ClInclude Include="cVideo.h" />
     <ClInclude Include="cVideoTest.h" />
-    <ClInclude Include="cViewDamage.h" />
     <ClInclude Include="cWayPoint.h" />
     <ClInclude Include="cXMesh.h" />
     <ClInclude Include="cXMesh_Skinned.h" />
@@ -178,7 +179,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="animation_Test.cpp" />
-    <ClCompile Include="berserker_backup.cpp" />
     <ClCompile Include="berserker_test.cpp" />
     <ClCompile Include="BoneHierachy.cpp" />
     <ClCompile Include="cBaseObject.cpp" />
@@ -209,9 +209,11 @@
     <ClCompile Include="cMonsterManager.cpp" />
     <ClCompile Include="cPartcleEmitter.cpp" />
     <ClCompile Include="cParticle.cpp" />
+    <ClCompile Include="cParticleQuad.cpp" />
     <ClCompile Include="cPet.cpp" />
     <ClCompile Include="cPhysicManager.cpp" />
     <ClCompile Include="cPlayer.cpp" />
+    <ClCompile Include="cQuadParticleEmitter.cpp" />
     <ClCompile Include="cQuadTree.cpp" />
     <ClCompile Include="cResourceMgr_XSkinnedMesh.cpp" />
     <ClCompile Include="cResourceMgr.cpp" />
@@ -261,7 +263,6 @@
     <ClCompile Include="cUI_SkillDeck.cpp" />
     <ClCompile Include="cVideo.cpp" />
     <ClCompile Include="cVideoTest.cpp" />
-    <ClCompile Include="cViewDamage.cpp" />
     <ClCompile Include="cWayPoint.cpp" />
     <ClCompile Include="cXMesh.cpp" />
     <ClCompile Include="cXMesh_Skinned.cpp" />
