--- a/3D_Project/3D_Project.vcxproj.filters
+++ b/3D_Project/3D_Project.vcxproj.filters
@@ -342,6 +342,12 @@
     <ClInclude Include="cSkill_AmorCrash.h">
       <Filter>Component\Skill</Filter>
     </ClInclude>
+    <ClInclude Include="cScene_Prologue.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
+    <ClInclude Include="cScene_Field.h">
+      <Filter>Scenes</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -608,9 +614,6 @@
     <ClCompile Include="cSkill_Thunder.cpp">
       <Filter>Component\Skill</Filter>
     </ClCompile>
-    <ClCompile Include="cVideoTest.cpp">
-      <Filter>Scenes</Filter>
-    </ClCompile>
     <ClCompile Include="cVideo.cpp">
       <Filter>Common</Filter>
     </ClCompile>
@@ -637,6 +640,18 @@
     </ClCompile>
     <ClCompile Include="cSkill_AmorCrash.cpp">
       <Filter>Component\Skill</Filter>
+    </ClCompile>
+    <ClCompile Include="cVideoTest.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cScene_Prologue.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="camera_Test.cpp">
+      <Filter>Scenes</Filter>
+    </ClCompile>
+    <ClCompile Include="cScene_Field.cpp">
+      <Filter>Scenes</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
