--- a/3D_Project/3D_Project.vcxproj
+++ b/3D_Project/3D_Project.vcxproj
@@ -123,7 +123,9 @@
     <ClInclude Include="cSceneChangeEffect.h" />
     <ClInclude Include="cSceneChangeEffectUpDown.h" />
     <ClInclude Include="cScene_BoundBoxTool.h" />
+    <ClInclude Include="cScene_Field.h" />
     <ClInclude Include="cScene_Mgr.h" />
+    <ClInclude Include="cScene_Prologue.h" />
     <ClInclude Include="cScene_testMonster.h" />
     <ClInclude Include="cSetBoundObject.h" />
     <ClInclude Include="cShowDamage.h" />
@@ -181,6 +183,7 @@
     <ClCompile Include="animation_Test.cpp" />
     <ClCompile Include="berserker_test.cpp" />
     <ClCompile Include="BoneHierachy.cpp" />
+    <ClCompile Include="camera_Test.cpp" />
     <ClCompile Include="cBaseObject.cpp" />
     <ClCompile Include="cBasilisk.cpp" />
     <ClCompile Include="cBerserker.cpp" />
@@ -223,7 +226,9 @@
     <ClCompile Include="cSceneChangeEffect.cpp" />
     <ClCompile Include="cSceneChangeEffectUpDown.cpp" />
     <ClCompile Include="cScene_BoundBoxTool.cpp" />
+    <ClCompile Include="cScene_Field.cpp" />
     <ClCompile Include="cScene_Mgr.cpp" />
+    <ClCompile Include="cScene_Prologue.cpp" />
     <ClCompile Include="cScene_testMonster.cpp" />
     <ClCompile Include="cSetBoundObject.cpp" />
     <ClCompile Include="cShowDamage.cpp" />
